fixes the search bottom move down on firefox
Reviewers: sarbada, #builo

Reviewed By: sarbada, #builo

Maniphest Tasks: T2013

Differential Revision: http://phabricator.jyaasa.com/D2195

--- a/app/assets/stylesheets/module/search.scss
+++ b/app/assets/stylesheets/module/search.scss
@@ -43,6 +43,7 @@
     &--action{
       @include inline-block;
       @include padding(0 0 0 2%);
+      vertical-align: top;
       .btn{
         &--primary{
           @include size (auto 60px);
